fix indicator layer overlap and imporve building procedure.

--- a/src/components/slider/style.css
+++ b/src/components/slider/style.css
@@ -26,12 +26,7 @@
   width: 100%;
   height: 100%;
   overflow: visible;
-  -webkit-flex-direction: row;
-  -moz-box-orient: horizontal;
-  -moz-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-orient: horizontal;
 }
 
 .weex-slider-cell {
@@ -42,15 +37,7 @@
   left: 0px;
   background: transparent !important;
   overflow: hidden;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -moz-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -58,27 +45,19 @@
   overflow: visible !important;
 }
 
-.weex-indicator {
+nav.weex-indicator {
   position: absolute;
   z-index: 10;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  -moz-box-orient: horizontal;
-  -moz-box-direction: normal;
   flex-direction: row;
-  -webkit-box-orient: horizontal;
   margin: 0;
   padding: 0;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -moz-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
+  transform: translate(-10rem, 0px)
+}
+
+div.weex-indicator-inner {
+  transform: translate(10rem, 0px)
 }
 
 .weex-indicator-item {
