--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -42,44 +42,18 @@ div.weex-root {
 }
 
 .weex-flex-ct {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .weex-ct {
   box-sizing: border-box;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: flex;
   position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-flex-direction: column;
-  -moz-box-orient: vertical;
-  -moz-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-flex-shrink: 0;
-  -ms-flex-negative: 0;
   flex-shrink: 0;
-  -webkit-flex-grow: 0;
-  -moz-box-flex: 0;
-  -ms-flex-grow: 0;
   flex-grow: 0;
-  -webkit-flex-basis: auto;
-  -ms-flex-preferred-size: auto;
   flex-basis: auto;
-  -webkit-box-align: stretch;
-  -webkit-align-items: stretch;
-  -moz-box-align: stretch;
-  -ms-flex-align: stretch;
   align-items: stretch;
-  -webkit-align-content: flex-start;
-  -ms-flex-line-pack: start;
   align-content: flex-start;
   border: 0 solid black;
   margin: 0;
@@ -88,11 +62,6 @@ div.weex-root {
 }
 
 .weex-ct.horizontal {
-  -webkit-box-orient: horizontal;
-  -webkit-flex-direction: row;
-  -moz-box-orient: horizontal;
-  -moz-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
 }
 
@@ -100,15 +69,8 @@ div.weex-root {
   display: block;
   box-sizing: border-box;
   position: relative;
-  -webkit-flex-shrink: 0;
-  -ms-flex-negative: 0;
   flex-shrink: 0;
-  -webkit-flex-grow: 0;
-  -moz-box-flex: 0;
-  -ms-flex-grow: 0;
   flex-grow: 0;
-  -webkit-flex-basis: auto;
-  -ms-flex-preferred-size: auto;
   flex-basis: auto;
   border: 0 solid black;
   margin: 0;
